--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,55 +1,150 @@
+.scrollbar-hide::-webkit-scrollbar {
+	display: none;
+}
+.scrollbar-hide {
+	-ms-overflow-style: none;
+}
 .breadcrumb {
-    margin-left: 2%;
-    margin-right: 2%;
-    margin-bottom: 2%;
-    margin-top: 1%;
+	margin-left: 2%;
+	margin-right: 2%;
+	margin-bottom: 2%;
+	margin-top: 1%;
 }
-
 .container {
-    margin-left: 4%;
-    margin-right: 4%;
+	margin-left: 4%;
+	margin-right: 4%;
 }
-
 .navbar-btn-img {
-    margin-right: 5%;
+	margin-right: 5%;
 }
-
 .profile-img {
-    border-radius: 9px;
+	border-radius: 9px;
 }
-
 .button.is-discord {
-    background-color: #7289DA;
-    border-color: transparent;
-    color: #fff;
+	background-color: #7289DA;
+	border-color: transparent;
+	color: #fff;
 }
-
-.button.is-discord:hover,
-.button.is-discord.is-hovered {
-    background-color: #7777CC;
-    border-color: transparent;
-    color: #fff;
+.button.is-discord:hover,.button.is-discord.is-hovered {
+	background-color: #7777CC;
+	border-color: transparent;
+	color: #fff;
 }
-
 .bottom-pinned {
-    bottom: 0%;
-    left: 0%;
-    right: 0%;
-    position: absolute;
+	bottom: 0%;
+	left: 0%;
+	right: 0%;
+	position: absolute;
 }
-
 .notification-message {
-    right: 0.5%;
-    top: 6%;
-    margin-left: 80%;
-    position: absolute;
-    box-shadow: 2px 2px 2px grey;
+	right: 0.5%;
+	top: 6%;
+	margin-left: 80%;
+	position: absolute;
+	box-shadow: 2px 2px 2px grey;
 }
-
 #tab-content p {
-    display: none;
+	display: none;
+}
+#tab-content p.is-active {
+	display: block;
+}
+/* navbar black-ter */
+.navbar.is-black-ter {
+	background-color: #242424;
+	color: white;
+}
+.navbar.is-black-ter .navbar-brand > .navbar-item,.navbar.is-black-ter .navbar-brand .navbar-link {
+	color: white;
+}
+.navbar.is-black-ter .navbar-brand > a.navbar-item:focus, .navbar.is-black-ter .navbar-brand > a.navbar-item:hover, .navbar.is-black-ter .navbar-brand > a.navbar-item.is-active,.navbar.is-black-ter .navbar-brand .navbar-link:focus,.navbar.is-black-ter .navbar-brand .navbar-link:hover,.navbar.is-black-ter .navbar-brand .navbar-link.is-active {
+	background-color: #161616;
+	color: white;
+}
+.navbar.is-black-ter .navbar-brand .navbar-link::after {
+	border-color: white;
+}
+.navbar.is-black-ter .navbar-burger {
+	color: white;
+}
+@media screen and (min-width: 1024px) {
+	.navbar.is-black-ter .navbar-start > .navbar-item,.navbar.is-black-ter .navbar-start .navbar-link,.navbar.is-black-ter .navbar-end > .navbar-item,.navbar.is-black-ter .navbar-end .navbar-link {
+		color: white;
+	}
+	.navbar.is-black-ter .navbar-start > a.navbar-item:focus, .navbar.is-black-ter .navbar-start > a.navbar-item:hover, .navbar.is-black-ter .navbar-start > a.navbar-item.is-active,.navbar.is-black-ter .navbar-start .navbar-link:focus,.navbar.is-black-ter .navbar-start .navbar-link:hover,.navbar.is-black-ter .navbar-start .navbar-link.is-active,.navbar.is-black-ter .navbar-end > a.navbar-item:focus,.navbar.is-black-ter .navbar-end > a.navbar-item:hover,.navbar.is-black-ter .navbar-end > a.navbar-item.is-active,.navbar.is-black-ter .navbar-end .navbar-link:focus,.navbar.is-black-ter .navbar-end .navbar-link:hover,.navbar.is-black-ter .navbar-end .navbar-link.is-active {
+		background-color: #161616;
+		color: white;
+	}
+	.navbar.is-black-ter .navbar-start .navbar-link::after,.navbar.is-black-ter .navbar-end .navbar-link::after {
+		border-color: white;
+	}
+	.navbar.is-black-ter .navbar-item.has-dropdown:focus .navbar-link,.navbar.is-black-ter .navbar-item.has-dropdown:hover .navbar-link,.navbar.is-black-ter .navbar-item.has-dropdown.is-active .navbar-link {
+		background-color: #161616;
+		color: white;
+	}
+	.navbar.is-black-ter .navbar-dropdown a.navbar-item.is-active {
+		background-color: #161616;
+		color: white;
+	}
+}
+/* fix darker grey navbar dropdown hover items */
+.navbar-dropdown a.navbar-item:focus, .navbar-dropdown a.navbar-item:hover {
+	background-color: #161616;
+	color: #0a0a0a;
+}
+.navbar-dropdown a.navbar-item.is-active {
+	background-color: #161616;
+	color: #485fc7;
+}
+/* fix box-shadow to be more prominent */
+.navbar-dropdown {
+	background-color: white;
+	border-bottom-left-radius: 6px;
+	border-bottom-right-radius: 6px;
+	border-top: 2px solid #dbdbdb;
+	box-shadow: 0px 5px 5px rgba(10, 10, 10, .7);
+	display: none;
+	font-size: 0.875rem;
+	left: 0;
+	min-width: 100%;
+	position: absolute;
+	top: 100%;
+	z-index: 20;
+}
+/* make footer smaller */
+.footer {
+	padding: 2rem 1.5rem 2rem;
+}
+/* set breacrumb text colors */
+.breadcrumb li.is-active a {
+  color: whitesmoke !important;
+  cursor: default;
+  pointer-events: none;
 }
 
-#tab-content p.is-active {
-    display: block;
+/* fix strongs to properly color themselves */
+strong {
+  color: currentColor;
+  font-weight: 700;
+}
+
+/* fix link colors to be lighter */
+a {
+  color: #3e8ed0 !important;
+}
+
+a:hover, a:focus {
+  color: #2b74b1 !important;
+}
+
+.navbar-item {
+  color: whitesmoke !important;
+}
+
+.navbar-link {
+  color: whitesmoke !important;
+}
+
+.navbar a {
+  color: whitesmoke !important;
 }
