Fix navbar divider and dropdown

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -87,6 +87,9 @@
 		background-color: #161616;
 		color: white;
 	}
+	.navbar-divider {
+    display: block;
+  }
 }
 .navbar-menu {
 	background-color: #242424;
