--- a/src/css/style.css
+++ b/src/css/style.css
@@ -16,9 +16,8 @@
 }
 .navbar-btn-img {
 	margin-right: 5%;
-}
-.profile-img {
-	border-radius: 9px;
+	width: 20px;
+	height: 20px;
 }
 .button.is-discord {
 	background-color: #7289DA;
@@ -50,7 +49,6 @@
 	display: block;
 }
 /* navbar black-ter */
-
 .navbar.is-black-ter {
 	background-color: #242424;
 	color: white;
@@ -67,29 +65,6 @@
 }
 .navbar.is-black-ter .navbar-burger {
 	color: white;
-}
-@media screen {
-	.navbar.is-black-ter .navbar-start > .navbar-item,.navbar.is-black-ter .navbar-start .navbar-link,.navbar.is-black-ter .navbar-end > .navbar-item,.navbar.is-black-ter .navbar-end .navbar-link {
-		color: white;
-	}
-	.navbar.is-black-ter .navbar-start > a.navbar-item:focus, .navbar.is-black-ter .navbar-start > a.navbar-item:hover, .navbar.is-black-ter .navbar-start > a.navbar-item.is-active,.navbar.is-black-ter .navbar-start .navbar-link:focus,.navbar.is-black-ter .navbar-start .navbar-link:hover,.navbar.is-black-ter .navbar-start .navbar-link.is-active,.navbar.is-black-ter .navbar-end > a.navbar-item:focus,.navbar.is-black-ter .navbar-end > a.navbar-item:hover,.navbar.is-black-ter .navbar-end > a.navbar-item.is-active,.navbar.is-black-ter .navbar-end .navbar-link:focus,.navbar.is-black-ter .navbar-end .navbar-link:hover,.navbar.is-black-ter .navbar-end .navbar-link.is-active {
-		background-color: #161616;
-		color: white;
-	}
-	.navbar.is-black-ter .navbar-start .navbar-link::after,.navbar.is-black-ter .navbar-end .navbar-link::after {
-		border-color: white;
-	}
-	.navbar.is-black-ter .navbar-item.has-dropdown:focus .navbar-link,.navbar.is-black-ter .navbar-item.has-dropdown:hover .navbar-link,.navbar.is-black-ter .navbar-item.has-dropdown.is-active .navbar-link {
-		background-color: #161616;
-		color: white;
-	}
-	.navbar.is-black-ter .navbar-dropdown a.navbar-item.is-active {
-		background-color: #161616;
-		color: white;
-	}
-	.navbar-divider {
-    display: block;
-  }
 }
 .navbar-menu {
 	background-color: #242424;
@@ -173,4 +148,39 @@ a:hover, a:focus {
 	left: 0;
 	width: 100%;
 	height: 100%;
+}
+
+@media only screen and (max-device-width: 480px) {
+	html {
+		font-size: 3.5vw;
+	}
+	.footer {
+		font-size: 2vw;
+	}
+	.navbar-btn-img {
+		margin-right: 5%;
+		width: 45px;
+		height: 45px;
+	}
+	.navbar.is-black-ter .navbar-start > .navbar-item,.navbar.is-black-ter .navbar-start .navbar-link,.navbar.is-black-ter .navbar-end > .navbar-item,.navbar.is-black-ter .navbar-end .navbar-link {
+		color: white;
+	}
+	.navbar.is-black-ter .navbar-start > a.navbar-item:focus, .navbar.is-black-ter .navbar-start > a.navbar-item:hover, .navbar.is-black-ter .navbar-start > a.navbar-item.is-active,.navbar.is-black-ter .navbar-start .navbar-link:focus,.navbar.is-black-ter .navbar-start .navbar-link:hover,.navbar.is-black-ter .navbar-start .navbar-link.is-active,.navbar.is-black-ter .navbar-end > a.navbar-item:focus,.navbar.is-black-ter .navbar-end > a.navbar-item:hover,.navbar.is-black-ter .navbar-end > a.navbar-item.is-active,.navbar.is-black-ter .navbar-end .navbar-link:focus,.navbar.is-black-ter .navbar-end .navbar-link:hover,.navbar.is-black-ter .navbar-end .navbar-link.is-active {
+		background-color: #161616;
+		color: white;
+	}
+	.navbar.is-black-ter .navbar-start .navbar-link::after,.navbar.is-black-ter .navbar-end .navbar-link::after {
+		border-color: white;
+	}
+	.navbar.is-black-ter .navbar-item.has-dropdown:focus .navbar-link,.navbar.is-black-ter .navbar-item.has-dropdown:hover .navbar-link,.navbar.is-black-ter .navbar-item.has-dropdown.is-active .navbar-link {
+		background-color: #161616;
+		color: white;
+	}
+	.navbar.is-black-ter .navbar-dropdown a.navbar-item.is-active {
+		background-color: #161616;
+		color: white;
+	}
+	.navbar-divider {
+    display: block;
+  }
 }
